# DOC_AI

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  pyproject.toml
app/: main.py
app/api/v1/: auth.py  collections.py  documents.py  rag.py
app/core/: config.py  security.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 3ce72a9a5b8e_create_collections_table.py  3fec1f7ff684_create_documents_table.py  5c425f4fe9ba_update_user_model.py  81959e08d84a_create_users_table.py  (+3 more)
app/dependencies/: auth.py
app/models/: chunk.py  collection.py  document.py  user.py
app/rag/: chunker.py  embedder.py  extractor.py  processor.py  prompt_builder.py  retriever.py
app/repositories/: chunk_repository.py  collection_repository.py  document_repository.py  user_repository.py
app/schemas/: auth.py  collection.py  document.py  rag.py
app/services/: auth_service.py  collection_service.py  document_service.py  exceptions.py  llm_service.py  processing_service.py  prompt_builder.py  rag_service.py
docker/: docker-compose.yml
scripts/: DOC_AI_Collections.postman_collection.json  DOC_AI_RAG_postman_collection.json  test_pipeline.py
tests/: conftest.py
tests/api/: conftest.py  test_auth_api.py  test_collections_api.py  test_documents_api.py  test_rag_api.py
tests/rag/: test_embedder.py  test_processor.py  test_prompt_builder.py  test_retriever.py
tests/repositories/: conftest.py  test_chunk_repository.py
tests/services/: conftest.py  test_llm_service.py  test_processing_service.py  test_prompt_builder.py  test_rag_service.py
